# Spritemap-to-Funky

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_WINDOWS.txt  downloads.html  how_use_ase_extencion_en.md  how_use_ase_extencion_es.md  index.html  package_release_windows.bat
.github/workflows/: codigosdelgtasandiarreas.yml  release.yml
Android/: NOT readme.md
Android/androidBuild/: .gitignore  README.md  build.sh  notas.txt
Android/androidBuild/app/: backend.ndll  project.xml
Android/androidBuild/app/android/java/org/haxe/extension/: AndroidFilePicker.java
Android/androidBuild/app/assets/Material/: Readme.md
Android/androidBuild/app/assets/icons/: Readme.md  Sprite-0001.aseprite
Android/androidBuild/app/assets/other/: project-info.json
Android/androidBuild/app/src/: Backend.hx  Main.hx  Model.hx  Native.hx  UiComponents.hx  zipManagerSave.hx
Android/androidBuild/app/src/android/: AndroidApp.hx  AndroidFilePicker.hx  AppConfig.hx  AppFonts.hx  AppLogger.hx  AppModel.hx  Backend.hx  ConsoleView.hx  MainView.hx  ProjectInfoOverlay.hx  ProjectNavbar.hx  RichTextBlock.hx  SplashView.hx  UiComponents.hx
Android/androidBuild/app/src/android/api/: Api.hx  DiscordRpcService.hx
Android/androidBuild/app/src/android/gestor/: GestorArchivosBackend.hx  ImportadorMediaBackend.hx
Android/androidBuild/app/src/backend/: Api.hx  Exporter.hx  Model.hx  Parser.hx  Renderer.hx  Tools.hx  ZipHelper.hx
Android/androidBuild/app/templates/: app-build.gradle
Android/androidBuild/cpp/: CMakeLists.txt  README.md  build_Unix.sh
Android/androidBuild/cpp/include/: i18n.hpp  parser.hpp
Android/androidBuild/cpp/src/: api.cpp  render.cpp  utils.cpp
Desktop/: build_windows.bat  package_release.sh
Desktop/assets/lang/: es.xml
Desktop/include/: math.hpp  render.hpp  types.hpp  utils.hpp
Desktop/source_test/data/: bf.json  dad.json
Desktop/source_test/data/bf/: bf.lua
Desktop/source_test/questions/: trask3.txt
Desktop/source_test/sprite/bfFTT/: Animation.json  spritemap1.json
Desktop/source_test/sprite/dadFTT/: Animation.json  spritemap1.json
Desktop/src/: exporter.cpp  gui_main.cpp  main.cpp  math.cpp  parser.cpp  render.cpp
assets/lang/: en.xml  es.xml
include/: exporter.hpp  exporter_ase.hpp
src/: exporter.cpp  exporter_ase.cpp  gui_main.cpp  i18n.cpp  main.cpp  parser.cpp
